// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BoxLoading component should match snapshot 1`] = `
<DocumentFragment>
  <svg
    aria-labelledby="abc-aria"
    height="400"
    role="img"
    width="400"
  >
    <title
      id="abc-aria"
    >
      Loading...
    </title>
    <rect
      clip-path="url(#abc-diff)"
      height="100%"
      role="presentation"
      style="fill: url(#abc-animated-diff);"
      width="100%"
      x="0"
      y="0"
    />
    <defs
      role="presentation"
    >
      <clippath
        id="abc-diff"
      >
        <rect
          height="13"
          rx="4"
          ry="4"
          width="100"
          x="75"
          y="233"
        />
        <rect
          height="8"
          rx="4"
          ry="4"
          width="50"
          x="75"
          y="260"
        />
        <rect
          height="10"
          rx="5"
          ry="5"
          width="400"
          x="0"
          y="210"
        />
        <rect
          height="200"
          rx="5"
          ry="5"
          width="400"
          x="0"
          y="0"
        />
      </clippath>
      <lineargradient
        id="abc-animated-diff"
      >
        <stop
          offset="0%"
          stop-color="#C0C0C0"
          stop-opacity="1"
        >
          <animate
            attributeName="offset"
            dur="2s"
            keyTimes="0; 0.25; 1"
            repeatCount="indefinite"
            values="-2; -2; 1"
          />
        </stop>
        <stop
          offset="50%"
          stop-color="#F4F4F4"
          stop-opacity="1"
        >
          <animate
            attributeName="offset"
            dur="2s"
            keyTimes="0; 0.25; 1"
            repeatCount="indefinite"
            values="-1; -1; 2"
          />
        </stop>
        <stop
          offset="100%"
          stop-color="#C0C0C0"
          stop-opacity="1"
        >
          <animate
            attributeName="offset"
            dur="2s"
            keyTimes="0; 0.25; 1"
            repeatCount="indefinite"
            values="0; 0; 3"
          />
        </stop>
      </lineargradient>
    </defs>
  </svg>
</DocumentFragment>
`;

exports[`BoxLoading component should render with inline styles 1`] = `
<DocumentFragment>
  <svg
    aria-labelledby="abc-aria"
    height="400"
    role="img"
    style="width: 100%; height: 300px;"
    width="400"
  >
    <title
      id="abc-aria"
    >
      Loading...
    </title>
    <rect
      clip-path="url(#abc-diff)"
      height="100%"
      role="presentation"
      style="fill: url(#abc-animated-diff);"
      width="100%"
      x="0"
      y="0"
    />
    <defs
      role="presentation"
    >
      <clippath
        id="abc-diff"
      >
        <rect
          height="13"
          rx="4"
          ry="4"
          width="100"
          x="75"
          y="233"
        />
        <rect
          height="8"
          rx="4"
          ry="4"
          width="50"
          x="75"
          y="260"
        />
        <rect
          height="10"
          rx="5"
          ry="5"
          width="400"
          x="0"
          y="210"
        />
        <rect
          height="200"
          rx="5"
          ry="5"
          width="400"
          x="0"
          y="0"
        />
      </clippath>
      <lineargradient
        id="abc-animated-diff"
      >
        <stop
          offset="0%"
          stop-color="#C0C0C0"
          stop-opacity="1"
        >
          <animate
            attributeName="offset"
            dur="2s"
            keyTimes="0; 0.25; 1"
            repeatCount="indefinite"
            values="-2; -2; 1"
          />
        </stop>
        <stop
          offset="50%"
          stop-color="#F4F4F4"
          stop-opacity="1"
        >
          <animate
            attributeName="offset"
            dur="2s"
            keyTimes="0; 0.25; 1"
            repeatCount="indefinite"
            values="-1; -1; 2"
          />
        </stop>
        <stop
          offset="100%"
          stop-color="#C0C0C0"
          stop-opacity="1"
        >
          <animate
            attributeName="offset"
            dur="2s"
            keyTimes="0; 0.25; 1"
            repeatCount="indefinite"
            values="0; 0; 3"
          />
        </stop>
      </lineargradient>
    </defs>
  </svg>
</DocumentFragment>
`;
